添加谷歌广告

--- a/reanimal/index.html
+++ b/reanimal/index.html
@@ -32,6 +32,35 @@
     <!-- Additional SEO Meta Tags -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
+
+      <!-- 延迟加载第三方脚本 -->
+  <script>
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        // 延迟加载Google Analytics
+        const gtagScript = document.createElement('script');
+        gtagScript.async = true;
+        gtagScript.defer = true;
+        gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-45NR00TMWB';
+        document.head.appendChild(gtagScript);
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-45NR00TMWB');
+
+
+        // 延迟加载广告
+        // const adsScript = document.createElement('script');
+        // adsScript.async = true;
+        // adsScript.defer = true;
+        // adsScript.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2318352950196721';
+        // adsScript.crossOrigin = 'anonymous';
+        // document.head.appendChild(adsScript);
+      }, 3000);
+    });
+  </script>
+
   </head>
   <body>
     <div id="app"></div>
